--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "engines": {
-    "node": "14.x",
-    "npm": "8.5.5"
+    "node": "16.16.0.",
+    "npm": "8.11.0"
   },
   "scripts": {
     "start": "node app.js"
