--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "engines": {
-    "node": "16.x.",
-    "npm": "8.11.0"
+    "node": "16.x"
   },
   "scripts": {
     "start": "node app.js"
